[gd_scene load_steps=6 format=3 uid="uid://c6b1ekeocoig2"]

[ext_resource type="Script" uid="uid://ckcag2mqwwup0" path="res://scripts/cursor.gd" id="1_e4vdg"]
[ext_resource type="Texture2D" uid="uid://dh244m00u8auc" path="res://assets/sprite/hand1.png" id="2_lh6cl"]
[ext_resource type="Texture2D" uid="uid://dajc3arvamrut" path="res://assets/sprite/hand2.png" id="3_sompw"]
[ext_resource type="Texture2D" uid="uid://d86voxljeume" path="res://assets/sprite/action_banner.png" id="4_lh6cl"]
[ext_resource type="Texture2D" uid="uid://cekghtr25gsyu" path="res://assets/sprite/action_fire.png" id="5_sompw"]

[node name="Cursor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e4vdg")

[node name="HandTexture" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="OpenHandTexture" type="TextureRect" parent="HandTexture"]
layout_mode = 0
offset_left = -12.0
offset_top = -20.0
offset_right = 28.0
offset_bottom = 20.0
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_lh6cl")
expand_mode = 1
flip_h = true

[node name="GrabHandTexture" type="TextureRect" parent="HandTexture"]
visible = false
layout_mode = 0
offset_left = -12.0
offset_top = -20.0
offset_right = 28.0
offset_bottom = 20.0
scale = Vector2(1.5, 1.5)
texture = ExtResource("3_sompw")
expand_mode = 1
flip_h = true

[node name="Control" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="BannerTexture" type="TextureRect" parent="Control"]
layout_mode = 0
offset_left = 18.0
offset_top = -47.0
offset_right = 79.0
offset_bottom = 11.0
texture = ExtResource("4_lh6cl")
expand_mode = 1

[node name="ActionTexture" type="TextureRect" parent="Control/BannerTexture"]
layout_mode = 0
offset_left = 11.0
offset_top = 8.0
offset_right = 51.0
offset_bottom = 48.0
texture = ExtResource("5_sompw")
expand_mode = 1
